# llmling-agent

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .rules  Dockerfile  README.md  alembic.ini  compose.yml  duties.py  mkdocs.yml  pyproject.toml  tach.toml
.github/workflows/: build.yml  documentation.yml  publish_docker.yml
docs/: agent.md  agent_config.md  cli.md  commands.md  examples.md  feature_timeline.toml  home.md  key_concepts.md  multi_agent.md  quickstart.md  running_agents.md  structure.txt  webui.md
docs/advanced/: acp_integration.md  agent_state.md  async.md  callables.md  capabilities.md  connections.md  db.md  document_conversion.md  events.md  generic_typing.md  injection.md  mcp_servers.md  models.md  passing_data.md  prompts.md  run_methods.md  syntactic_sugar.md  system_prompts.md  task_monitoring.md
docs/agents/: basic_agent.md  create_agents.md  slashed_agent.md  structured_agent.md  team.md  tool_manager.md
docs/concepts/: agent_context.md  capabilities.md  conversation_manager.md  events.md  knowledge.md  mcp.md  messages.md  pool.md  routing.md  run_methods.md  signals.md  storage.md  talk.md  tasks.md  team_run.md
docs/config_file/: capabilities_config.md  condition_config.md  connection_config.md  env_config.md  events_config.md  forward_config.md  inheritance.md  knowledge_config.md  manifest.md  mcp_config.md  model_config.md  prompt_config.md  provider_config.md  response_config.md  session_config.md  storage_config.md  system_prompts.md  task_config.md  team_config.md  tool_config.md  toolset_config.md  worker_config.md
docs/examples/: create_docs.md  download_agents.md  human_interaction.md  mcp_servers.md  pick_team.md  pytest_style.md  round_robin.md  structured_response.md
docs/getting_started/: basic_concepts.md  installation.md  quickstart.md
docs/interaction/: extract.md  pick.md
docs/pool/: slashed_pool.md
fuzzy_matcher/: __init__.py  example_usage.py  streaming_fuzzy_matcher.py  test_streaming_fuzzy_matcher.py
migrations/: README_USAGE.md  __init__.py  env.py
migrations/versions/: 5ffc5f0266a1_initial_migration_with_renamed_token_.py  __init__.py
schema/: config-schema.json
scripts/: generate_acp_schema_code.py  generate_schema.py  get_github_copilot_token.py
src/: llm_info.md
src/acp/: README.md  __init__.py  acp_types.py  base.py  client.py  connection.py  core.py  exceptions.py  meta.py  notifications.py  requests.py  schema.py  stdio.py  terminal_handle.py  transports.py
src/llmling_agent/: __init__.py  __main__.py  agent.py  base_provider.py  common_types.py  content_utils.py  context.py  conversions.py  embeddings.py  factory.py  functional.py  loader.py  log.py  model_utils.py  models.py  pydantic_ai_utils.py  request_info.py  resource_registry.py  server.py  splitter.py  storage.py  storage_models.py  templating.py  tools.py  vector_db.py
src/llmling_agent_acp/: README.md  __init__.py  acp_agent.py  acp_commands.py  acp_tools.py  acp_types.py  command_bridge.py  converters.py  debug_commands.py  example_config.yml  mcp_commands.py  mcp_progress.py  permission_server.py  server.py  session.py  session_manager.py  syntax_detection.py  tools.py  types.py  wrappers.py  zed_tools.md
src/llmling_agent_cli/: __init__.py  agent.py  chat.py  cli_types.py  create.py  history.py  quickstart.py  run.py  serve.py  serve_acp.py  serve_api.py  serve_mcp.py  task.py  ui.py  utils.py  watch.py  web.py
src/llmling_agent_commands/: __init__.py  agents.py  commands.py  completers.py  connections.py  env.py  markdown_utils.py  meta.py  models.py  prompts.py  read.py  resources.py  session.py  tools.py  utils.py  workers.py
src/llmling_agent_config/: __init__.py  conditions.py  content.py  converters.py  embeddings.py  environment.py  events.py  forward_targets.py  jinja.py  knowledge.py  loaders.py  mcp_server.py  models.py  nodes.py  observability.py  pool_server.py  prompt_hubs.py  prompts.py  providers.py  rag.py  resources.py  result_types.py  session.py  splitters.py  storage.py  system_prompts.py  task.py  teams.py  tools.py  toolsets.py  ui.py  vector_db.py  workers.py
src/llmling_agent_converters/: __init__.py  base.py  google_speech.py  kreuzberg_converter.py  local_whisper.py  markitdown_converter.py  plain_converter.py  whisper_api.py  youtubeconverter.py
src/llmling_agent_docs/: __init__.py  advanced_features.py  agent_interaction.py  cli.py  configuration.py  core_concepts.py  create_docs.py  examples.py  getting_started.py  interaction_patterns.py  root.py  usage.py  utils.py
src/llmling_agent_embeddings/: bge_provider.py  litellm_provider.py  openai_provider.py  stf_provider.py
src/llmling_agent_events/: base.py  email_watcher.py  file_watcher.py  timed_watcher.py  webhook_watcher.py
src/llmling_agent_examples/: __init__.py  create_docs.py  crewai_flow.py  download_agents.py  download_agents.yml  download_workers.py  gossip_talk.py  human_interaction.py  mcp_servers.py  mcp_servers_yaml.py  minimal.py  model_comparison.py  pick.py  pick_teams.py  pytest_style.py  round_robin.yml  structured_decisions.py  structured_decisions_extended.py  structured_response.py  structured_validation.py  utils.py
src/llmling_agent_functional/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_agent.py  test_agent_piping.py  test_agent_signals.py  test_chat_session.py  test_cli.py  test_commands_integration.py  test_connection_registry.py  test_conversation.py  test_delegation.py  test_discovery.py  test_environment_types.py  test_events.py  test_executor.py  test_factory.py  test_functional.py  test_history.py  test_loader.py  test_mcp_tools.py  test_message_tracker.py  test_model_creation.py  test_model_interitance.py  test_models.py  test_multimodal.py  test_multimodels.py  test_observability.py  test_observability_integration.py  test_orchestration.py  test_parallel_agents.py  test_pick.py  test_process_integration.py  test_process_manager.py  test_prompt_manager.py  test_responses.py  test_runcontext.py  test_runners.py  test_schema.py  test_signal_forwarding.py  test_slashed_pool.py  (+10 more)
(+602 files in other folders)
